--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,2 @@
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body { margin: 0; font-family: sans-serif; background-color: #f3f4f6; }
