--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,7 @@
 
-body { margin: 0; font-family: sans-serif; background-color: #f3f4f6; }
+body {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #000;
+  color: #fff;
+}
